--- a/FlylinkDCpatchFileRenamer/src/reg/util/dc/flylink/renamer/logging.properties
+++ b/FlylinkDCpatchFileRenamer/src/reg/util/dc/flylink/renamer/logging.properties
@@ -1,19 +1,3 @@
-#/*
-#    * Copyright (C) 2013 Developed by reg <entry.reg@gmail.com>
-#    *
-#    * Licensed under the Apache License, Version 2.0 (the "License");
-#    * you may not use this file except in compliance with the License.
-#    * You may obtain a copy of the License at
-#    *
-#    *      http://www.apache.org/licenses/LICENSE-2.0
-#    *
-#    * Unless required by applicable law or agreed to in writing, software
-#    * distributed under the License is distributed on an "AS IS" BASIS,
-#    * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-#    * See the License for the specific language governing permissions and
-#    * limitations under the License.
-#*/
-
 handlers= java.util.logging.FileHandler, java.util.logging.ConsoleHandler
 .level= INFO
 
@@ -24,11 +8,11 @@ handlers= java.util.logging.FileHandler, java.util.logging.ConsoleHandler
 #   %g - generation number for rotating logs
 #   %u - unique number to avoid conflicts
 # ex: %h/log.xml
-java.util.logging.FileHandler.pattern = %t/FlylinkDCpatchFileRenamer%u.log
+java.util.logging.FileHandler.pattern = patchFileRenamer%u.log.xml
 java.util.logging.FileHandler.limit = 50000
 java.util.logging.FileHandler.count = 1
 java.util.logging.FileHandler.formatter = java.util.logging.XMLFormatter
-java.util.logging.FileHandler.level = WARNING
+java.util.logging.FileHandler.level = INFO
 
 # Limit the message that are printed on the console to INFO and above.
 java.util.logging.ConsoleHandler.level = INFO
